<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/main_background"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddRecipe"
        android:background="@color/main_background">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ring_button"
            android:text="@string/add_button"
            android:onClick="addActivity"
            android:textColor="@color/button_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.986"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:background="@drawable/search_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/add"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            tools:ignore="SpeakableTextPresentCheck" />


        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/card_background"
            android:orientation="vertical"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="25dp"
                    android:text="@string/add_title"
                    android:padding="2dp"
                    android:textColor="@color/title_color"/>

                <EditText
                    android:id="@+id/titleText"
                    android:padding="2dp"
                    android:layout_marginRight="25dp"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="3dp"
                    android:layout_height="25dp"
                    android:inputType="text"
                    android:gravity="left"
                    android:background="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="25dp"
                    android:text="@string/add_time"
                    android:padding="2dp"
                    android:textColor="@color/title_color"/>

                <EditText
                    android:id="@+id/timeText"
                    android:padding="2dp"
                    android:layout_marginRight="25dp"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="3dp"
                    android:layout_height="25dp"
                    android:inputType="text"
                    android:gravity="left"
                    android:background="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="25dp"
                    android:text="@string/add_style"
                    android:padding="2dp"
                    android:textColor="@color/title_color"/>

                <EditText
                    android:id="@+id/styleText"
                    android:padding="2dp"
                    android:layout_marginRight="25dp"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="3dp"
                    android:layout_height="25dp"
                    android:inputType="text"
                    android:gravity="left"
                    android:background="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="25dp"
                    android:text="@string/add_type"
                    android:padding="2dp"
                    android:textColor="@color/title_color"/>

                <EditText
                    android:id="@+id/typeText"
                    android:padding="2dp"
                    android:layout_marginRight="25dp"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="3dp"
                    android:layout_height="25dp"
                    android:inputType="text"
                    android:gravity="left"
                    android:background="@color/white"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_ingredients"
                android:padding="2dp"
                android:textColor="@color/title_color"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/ingredientsText"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:gravity="left"
                android:singleLine="false"
                android:background="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_instruction"
                android:padding="2dp"
                android:textColor="@color/title_color"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/instructionsText"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:inputType="textMultiLine"
                android:gravity="left"
                android:singleLine="false"
                android:background="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_notes"
                android:padding="2dp"
                android:textColor="@color/title_color"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/notesText"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:gravity="left"
                android:singleLine="false"
                android:background="@color/white"/>

            <LinearLayout
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:text="@string/add_vid"
                    android:padding="2dp"
                    android:textColor="@color/title_color"/>

                <EditText
                    android:id="@+id/videoText"
                    android:padding="2dp"
                    android:layout_marginRight="25dp"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="3dp"
                    android:layout_height="25dp"
                    android:inputType="textUri"
                    android:gravity="left"
                    android:background="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="396dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:text="@string/add_pic"
                    android:padding="2dp"
                    android:textColor="@color/title_color"/>

                <TextView
                    android:padding="2dp"
                    android:layout_marginRight="25dp"
                    android:layout_width="180dp"
                    android:layout_marginTop="3dp"
                    android:layout_height="25dp"
                    android:text="@string/pic"
                    android:background="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@drawable/search_button"
                    android:text="@string/upload_pic"
                    android:onClick="uploadPicture"
                    android:textColor="@color/button_outline"
                    android:layout_gravity="right"
                    android:layout_marginRight="30dp"
                    />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/search_button"
                android:text="@string/add_recipe"
                android:textColor="@color/button_outline"
                android:layout_gravity="right"
                android:onClick="details"
                android:layout_marginBottom="30dp"
                />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
